kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simple-dev
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: simple-dev         
    spec:
      containers:
      - name: simple
        image: quay.io/dhanamjaya/do400-deploying-environments:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 8080
            protocol: TCP
