kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: simple-dev
  name: simple-dev
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
  selector:
    app: simple-dev
